@@ -14,10 +14,18 @@ AC_DEFUN([GNOME_SUPPORT_CHECKS],[
 
   # We check for argp_domain because we use it, and it appears only in 
   # very recent versions of the argp library.
-  AC_TRY_COMPILE([#include <argp.h>], [
-  struct argp foo;
-  extern char *foo2;
-  foo.argp_domain = foo2;],,LIBOBJS="$LIBOBJS argp-ba.o argp-eexst.o argp-fmtstream.o argp-fs-xinl.o argp-help.o argp-parse.o argp-pv.o argp-pvh.o argp-xinl.o")
+  AC_CACHE_CHECK([for working argp code], gnome_cv_argp, [
+    AC_TRY_COMPILE([#include <argp.h>], [
+        struct argp foo;
+	extern char *foo2;
+	foo.argp_domain = foo2;],
+      gnome_cv_argp=yes,
+      gnome_cv_argp=no)])
+
+  if test "$gnome_cv_argp" = no; then
+     LIBOBJS="$LIBOBJS argp-ba.o argp-eexst.o argp-fmtstream.o argp-fs-xinl.o argp-help.o argp-parse.o argp-pv.o argp-pvh.o argp-xinl.o"
+  fi
+
   # This header enables some optimizations inside argp.  
   AC_CHECK_HEADERS(linewrap.h)
 
