@@ -1,3 +1,7 @@
+Thu Mar 19 00:17:46 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* gnome-support.m4: Cache results of argp check.
+
 Sun Mar 15 15:54:43 1998  Owen Taylor  <owt1@cornell.edu>
 
 	* gnome-x-checks.m4: Replaced checks for X and GTK
